--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }} | iwanttotry.science</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css">
-    <link href='//fonts.googleapis.com/css?family=Roboto&subset=latin,latin-ext' rel='stylesheet'>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    <meta name="viewport" content="width=device-width">
   </head>
   <body style="padding-top: 70px">
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -16,7 +16,20 @@
     </nav>
     <div class="container">
       <h1>{{ page.title }}</h1>
-      {{ content }}
+      <main class="flow-text">
+        {{ content }}
+      </main>
     </div>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        "HTML-CSS": {mtextFontInherit: true},
+        SVG: {mtextFontInherit: true}
+      });
+    </script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML&locale=pl"></script>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/unveil/1.3.0/jquery.unveil.min.js"></script>
+    <script>$(document).ready(function() { $("img[data-src]").unveil(); });</script>
   </body>
 </html>
