--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
     <meta name="viewport" content="width=device-width">
   </head>
-  <body style="padding-top: 70px">
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">iwanttotry.science</a>
+  <body>
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper">
+          <a class="brand-logo center" href="/">iwanttotry.science</a>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <div class="container">
       <h1>{{ page.title }}</h1>
       <main class="flow-text">
