--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }} | iwanttotry.science</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:type" content="article">
     <meta property="og:url" content="http://iwanttotry.science{{ page.url }}">
