--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }} | iwanttotry.science</title>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta property="og:title" content="{{ page.title }}">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="http://iwanttotry.science{{ page.url }}">
-    <meta property="og:locale" content="pl_PL">
-    <meta property="og:site_name" content="IWantToTry.Science">
-    <style>.chip { margin-right: 10px; }</style>
+    {% include header.html %}
   </head>
   <body>
     <div class="navbar-fixed">
-      <nav>
+      <nav class="indigo">
         <div class="nav-wrapper">
           <a class="brand-logo center" href="/">iwanttotry.science</a>
         </div>
@@ -27,6 +18,7 @@
         {{ content }}
       </main>
     </div>
+    {% include footer.html %}
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         "HTML-CSS": {mtextFontInherit: true},
