shooting at the moon to bring the sun up

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,16 @@
     <footer class="page-footer indigo">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 m6 white-text">
+            <h6>Strona szuka sponsora</h6>
+            <p>Roczny koszt utrzymania domeny: 150 PLN brutto</p>
+            <p>Roczny koszt hostingu: 0 PLN brutto</p>
+            <p>Uśmiechy młodych fizyków: bezkarne</p>
+            <h6>Prosimy o kontakt <a href="http://www.google.com/recaptcha/mailhide/d?k=01M5mzZBSMNxdFWcPREvLjBw==&amp;c=OoJP00xsR78MMYgyxbjc7ZEfBgiZe1hJaof_r8N0Sws=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501M5mzZBSMNxdFWcPREvLjBw\75\75\46c\75OoJP00xsR78MMYgyxbjc7ZEfBgiZe1hJaof_r8N0Sws\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Ujawnij adres e-mail">m...</a>@gmail.com</h6>
+            <h6>Następna data odnowienia: 6 czerwca 2015</h6>
+          </div>
+        </div>
+      </div>
       <div class="footer-copyright">
         <div class="container">
           <p>© 2015 Komitet Uczniowski Uczniów Kamila Kamińskiego "Szczęść Sorze"</p>
